fix footer blurb z-index

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -922,7 +922,7 @@ nav {
 
 			margin-top: 0;
 			@include box-sizing(border-box);
-			padding-top:90px;
+			padding-top:115px;
 			// padding-bottom: 40px;
 
 		}
